<resources>
    <string name="app_name">CapstoneProjects</string>
    <string name="exercise_trainning">EXERCISE TRAINNING</string>
    <string name="nama">NAMA LENGKAP</string>
    <string name="email">EMAIL</string>
    <string name="weight">BERAT BADAN</string>
    <string name="kg">Kg</string>
    <string name="height">TINGGI BADAN</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="fitnesskan">FITNESSKAN</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="upload_video">UPLOAD VIDEO</string>
    <string name="select_video">SELECT VIDEO</string>
    <string name="null_premission">Tidak Mendapatkan Izin</string>

    <string name="title_dialog_error">Oops something wrong</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="label_is_havent_account">Don\'t have account ?</string>
    <string name="label_is_have_account">Already have account ?</string>
    <string name="action_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_to_register">Register here</string>
    <string name="action_to_login">Login here</string>
    <string name="message_failed_take_picture">Upload failed</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="action_logout">Logout</string>
    <string name="message_logout_confirm">Are you sure want logout ?</string>
    <string name="action_yes">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="message_incorrect_auth">Email or password incorrect</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="title_new_story">Add New Story</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="title_choose_a_picture">Pilih Photo</string>
    <string name="message_success_upload">Upload berhasil</string>
    <string name="title_upload_info">Upload Info</string>
    <string name="action_upload_story">Upload Story</string>
    <string name="hint_description">Story Description</string>
    <string name="appwidget_text">Story Image Banner</string>
    <string name="empty_text">No Data</string>
    <string name="app_widget_description">Story App Image Banner Widget</string>
    <string name="error_password_more_6">Password must more than 6 character</string>
    <string name="label_nama">Name</string>
    <string name="message_register_success">Register Success</string>
    <string name="message_pick_image">Pick an image</string>
    <string name="error_desc_empty">Description can\'t empty</string>
    <string name="time">time</string>
    <string name="title_alert_dialog">Oke</string>
    <string name="message_alert_dialog_login">Login Berhasil</string>
    <string name="title_register">Register Now..</string>
    <string name="hint_edt_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="cm">Cm</string>

    <string-array name="dataname">
        <item>Squad</item>
        <item>Bicep Curl</item>
        <item>Deadlift</item>
        <item>Lunges</item>
        <item>Plank</item>
        <item>Bench Press</item>
    </string-array>

    <string-array name="squad">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="bicep">
        <item>14</item>
        <item>12</item>
        <item>10</item>
        <item>8</item>
        <item>20</item>
        <item>16</item>
    </string-array>
    <string-array name="deadlift">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/squad</item>
        <item>@drawable/bicep_curl</item>
        <item>@drawable/deadlift</item>
        <item>@drawable/lunges</item>
        <item>@drawable/plank</item>
        <item>@drawable/bench_press</item>
    </integer-array>
</resources>