<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/grey"
  tools:context=".home_page">

  <ImageButton
      android:id="@+id/imageView"
      android:layout_width="55dp"
      android:layout_height="55dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/logo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:contentDescription="@string/todo" />


  <EditText
      android:id="@+id/search_view"
      android:layout_width="220dp"
      android:layout_height="57dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/search"
      android:drawableStart="@drawable/baseline_search_24"
      android:elevation="5dp"
      android:hint="@string/search"
      android:textColorHint="@color/black"
      android:textColor="@color/black"
      app:iconifiedByDefault="false"
      app:layout_constraintBottom_toBottomOf="@+id/imageView"
      app:layout_constraintEnd_toStartOf="@+id/progress_list"
      app:layout_constraintStart_toEndOf="@+id/imageView"
      app:layout_constraintTop_toTopOf="@+id/imageView"
      app:layout_constraintVertical_bias="1.0"
      tools:ignore="MissingConstraints" />

  <ImageButton
      android:id="@+id/progress_list"
      android:layout_width="55dp"
      android:layout_height="55dp"
      android:layout_marginStart="5dp"
      android:background="@drawable/ic_progress_list"
      app:layout_constraintBottom_toBottomOf="@+id/search_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/search_view"
      android:contentDescription="TODO" />

  <TextView
      android:id="@+id/explore_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="30dp"
      android:text="ANALYSIS YOUR FROM"
      android:textColor="@color/yellow"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/search_view" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/item_user_recycleview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:paddingBottom="145dp"
      app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/explore_text"
      tools:listitem="@layout/item" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/idFABAdd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:background="@color/yellow"
      android:contentDescription="@string/app_name"
      android:padding="4dp"
      android:src="@drawable/ic_add"
      app:backgroundTint="@color/yellow"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.954"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.976"
      app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>